fixed scrollbar for body

--- a/styles.css
+++ b/styles.css
@@ -1004,6 +1004,40 @@ body {
   background-color: #333;
 }
 
+
+/* Body scrollbar */
+body::-webkit-scrollbar {
+  width: 10px;
+  background-color: #f2f2f2;
+  border-radius: 0;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #cccccc;
+  border-radius: 5px;
+  border: 2.5px solid #f2f2f2;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #aaa;
+}
+
+/* Dark mode body scrollbar */
+body.dark-mode::-webkit-scrollbar {
+  background-color: #555;
+}
+
+body.dark-mode::-webkit-scrollbar-thumb {
+  background-color: #727578;
+  border: 2.5px solid #555;
+}
+
+body.dark-mode::-webkit-scrollbar-thumb:hover {
+  background-color: #333;
+}
+
+
+
 .dark-mode .js-gotop {
   background-color: #555; /* or any other medium-dark gray shade */
   color: #fff;
